fix: Code generator duplicate variable declarations in loops
PROBLEM:
- FlowScript syntax uses 'x = value' for both declaration and reassignment
- Parser treats every assignment as VariableDeclarationNode
- StatementGenerator was generating 'var x = value;' for EVERY assignment
- This caused "variable already defined" errors in loops:
  funcion calcularFactorial(n: entero) -> entero {
      resultado = 1           # Generated: var resultado = 1;
      para i desde 1 hasta n {
          resultado = resultado * i  # Generated: var resultado = ... (ERROR!)
      }
      retornar resultado
  }

SOLUTION:
- Added declaredVariables Set to StatementGenerator to track variables
- First assignment generates: var x = value; (adds to set)
- Subsequent assignments generate: x = value; (no var keyword)
- clearScope() method called when entering new function/process

CHANGES:
1. StatementGenerator.java:
   - Added declaredVariables field (Set<String>)
   - Added clearScope() method to reset tracking
   - Modified generateVariableDeclarationStatement() to check if already declared

2. FunctionGenerator.java:
   - Call statementGenerator.clearScope() before generating function body

3. ProcessGenerator.java:
   - Call statementGenerator.clearScope() before generating process body

RESULT:
✅ order_processing_system.fls now compiles successfully
✅ All 5 transpilation phases complete without errors
✅ 241 lines of Java code generated
✅ 2648 bytes of bytecode produced

TEST:
Verified with calcularFactorial, aplicarDescuento, and proceso FlujoPedido

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>